add spacing below lists

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,6 +275,10 @@ ol li p, ul li p {
   margin-left: 2.5em;
 }
 
+ul, ol {
+  padding-bottom: 0.5rem;
+}
+
 /* Tables */
 table {
   font-size: 85%;
