update highlight init

--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/foundation.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 <script>
-  hljs.initHighlightingOnLoad();
+  hljs.highlightAll();
 </script>
 
 <!-- Math syntax -->
