--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,11 +11,11 @@
             {{ end }}
             {{ end }}
         </div>
-    </nav>
+    </div>
     {{ else }}
     <div class="nav-outer">
         <div class="nav-inner"></div>
-    </nav>
+    </div>
     {{ end }}
 </div>
 
