--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,10 @@
-@media all {html {font-size: 23px;}}
-@media all and (max-width: 1600px){html {font-size: 24px;}}
-@media all and (max-width: 1000px){html {font-size: 23px;}}
-@media all and (max-width: 880px){html {font-size: 22px;}}
-@media all and (max-width: 800px){html {font-size: 21px;}}
-@media all and (max-width: 600px){html {font-size: 20px;}}
-@media all and (max-width: 480px){html {font-size: 19px;}}
+@media all {html {font-size: 21px;}}
+@media all and (max-width: 1600px){html {font-size: 22px;}}
+@media all and (max-width: 1000px){html {font-size: 21px;}}
+@media all and (max-width: 880px){html {font-size: 20px;}}
+@media all and (max-width: 800px){html {font-size: 19px;}}
+@media all and (max-width: 600px){html {font-size: 18px;}}
+@media all and (max-width: 480px){html {font-size: 17px;}}
 
 /* General */
 html {
@@ -243,6 +243,11 @@ iframe {
   display: block;
   margin: auto;
   padding-bottom: 1em;
+}
+
+img.icon {
+  width: initial;
+  padding: 0 5px;
 }
 
 /* Lists */
