--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,22 +18,28 @@
 <div class="sidenote">socials</div>
 <div class="social-icons" style="margin-top: 0.5rem;">
     {{ if eq .Site.Params.iconsource "simple-icons" }}
-        {{ range .Site.Params.social }}
-            <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
-                <img class="icon" height="28" width="28" src="https://cdn.simpleicons.org/{{ .icon }}/444"/>
-            </a>
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <img class="icon" height="28" width="28" src="https://cdn.simpleicons.org/{{ .icon }}/444"/>
+                </a>
+            {{ end }}
         {{ end }}
     {{ else if eq .Site.Params.iconsource "fontawesome" }}
-        {{ range .Site.Params.social }}
-            <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
-                <i class="{{ .icon }}"></i>
-            </a>
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <i class="{{ .icon }}"></i>
+                </a>
+            {{ end }}
         {{ end }}
     {{ else }}
-        {{ range .Site.Params.social }}
-            <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
-                <i data-feather="{{ .icon }}" style="margin-right: 0.5rem;"></i>
-            </a>
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <i data-feather="{{ .icon }}" style="margin-right: 0.5rem;"></i>
+                </a>
+            {{ end }}
         {{ end }}
     {{ end }}
 </div>
