--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -29,7 +29,7 @@
         {{ end }}
     {{ end }}
 
-    {{ if not .Site.IsServer }}
+    {{ if and .Site.Params.umami (not .Site.IsServer) }}
         <script async src="{{ .Site.Params.umamilink }}" data-website-id="{{ .Site.Params.umamiid }}"></script>
     {{ end }}
     
