--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,12 +11,6 @@ html {
   height: 100%;
 }
 
-@media all and (max-width: 1200px) {
-  html {
-    height: 100%;
-  }
-}
-
 body {
   position: relative;
   max-width: 1000px;
@@ -32,7 +26,7 @@ body {
 
 @media all and (max-width: 1200px) {
   body {
-    min-width: auto;
+    max-width: 100vw;
   }
 }
 
@@ -60,9 +54,9 @@ body > * {
 
 @media all and (max-width: 1200px) {
   div#content {
-      width: 80%;
-      margin: 1.5rem;
-      margin-top: 0;
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
       padding: 3rem 0;
     }
 }
