--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,24 +3,46 @@
 <div style="height: 2rem;"></div>
 {{ if .Site.Params.intro }}
     {{ if .Site.Params.introtag }}
-        <div class="sidenote" style="margin-top: 1rem;">{{ .Site.Params.introtag }} </div>
+        <div class="sidenote" style="margin-top: 1rem;">{{ .Site.Params.introtag }}</div>
     {{ end }}
     <p class="intro-text">{{ .Site.Params.intro | markdownify }}</p>
     <div style="height: 2.5rem;"></div>
 {{ end }}
 <div class="sidenote" style="margin-top: 0.5rem;">pages</div>
-{{ range .Site.Menus.main }}
-    {{- if ne .Name "Home" -}}
-    <h3 class="list"><a class="title" href="{{ .URL }}">{{ .Name | lower | markdownify }}</a></h3>
+{{ with .Site.Menus.main }}
+    {{ range sort . "Weight" }}
+        {{ if ne .Name "Home" }}
+            <h3 class="list"><a class="title" href="{{ .URL }}">{{ .Name | lower | markdownify }}</a></h3>
+        {{ end }}
     {{ end }}
 {{ end }}
 <div style="height: 2.5rem;"></div>
 <div class="sidenote">socials</div>
 <div class="social-icons" style="margin-top: 0.5rem;">
-    {{ range .Site.Params.social }}
-        <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
-          <i data-feather="{{ .icon }}" style="margin-right: 0.5rem;"></i>
-        </a>
+    {{ if eq .Site.Params.iconsource "simple-icons" }}
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <img class="icon" height="28" width="28" src="https://cdn.simpleicons.org/{{ .icon }}/444"/>
+                </a>
+            {{ end }}
+        {{ end }}
+    {{ else if eq .Site.Params.iconsource "fontawesome" }}
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <i class="{{ .icon }}"></i>
+                </a>
+            {{ end }}
+        {{ end }}
+    {{ else }}
+        {{ with .Site.Params.social }}
+            {{ range sort . "weight" }}
+                <a href="{{ .url }}" {{ .html_attributes | safeHTMLAttr }}>
+                    <i data-feather="{{ .icon }}" style="margin-right: 0.5rem;"></i>
+                </a>
+            {{ end }}
+        {{ end }}
     {{ end }}
 </div>
 {{ end }}
