--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
+    {{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
+    <meta name="description" content="{{ if .IsPage }}{{ .Site.BaseURL }}{{ else }}{{ .Site.Params.description }}{{ end }}">
+    {{ with .Site.Params.keywords }}<meta name="keywords" content="{{ . }}">{{ end }}
+
+    <meta property="og:site_name" content="{{ .Site.Title }}">
+    <meta property="og:title" content="{{ block "og-title" . }}{{ .Site.Title }}{{ end }}">
+    <meta property="og:description" content="{{ if .IsPage }}{{ .Params.description }}{{ else }}{{ .Site.Params.description }}{{ end }}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ .Permalink }}">
+    <meta property="og:image" content="{{ if .IsPage }}{{ .Site.BaseURL }}{{ .Params.thumbnail }}{{ else }}{{ .Site.BaseURL }}{{ .Site.Params.favicon }}{{ end }}">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="{{ .Permalink }}">
+    <meta name="twitter:image" content="{{ if .IsPage }}{{ .Site.BaseURL }}{{ .Params.thumbnail }}{{ else }}{{ .Site.BaseURL }}{{ .Site.Params.favicon }}{{ end }}">
+
     {{ $stylesheet := "css/style.css" }}
     <link rel="stylesheet" type="text/css" href="{{ $stylesheet | absURL }}">
     
@@ -23,6 +37,10 @@
         {{ with .Site.Params.favicon }}
             <link rel="shortcut icon" href="{{ . | relURL }}">
         {{ end }}
+    {{ end }}
+
+    {{ if and .Site.Params.umami (not .Site.IsServer) }}
+        <script async src="{{ .Site.Params.umamilink }}" data-website-id="{{ .Site.Params.umamiid }}"></script>
     {{ end }}
     
     {{ $title := print .Title " | " .Site.Title }}
