--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,12 +11,6 @@ html {
   height: 100%;
 }
 
-@media all and (max-width: 800px) {
-  html {
-    height: 100%;
-  }
-}
-
 body {
   position: relative;
   max-width: 1000px;
@@ -30,15 +24,15 @@ body {
   -webkit-font-smoothing: subpixel-antialiased;
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1200px) {
   body {
-    min-width: auto;
+    max-width: 100vw;
   }
 }
 
 body > * {
   font-family: "source-serif-4", serif;
-  font-size: 90%;
+  font-size: 85%;
   font-weight: 500;
   font-style: normal;
   margin-left: 11rem;
@@ -55,16 +49,20 @@ body > * {
 
 #content {
   width: 29rem;
-  padding: 3rem 0 8rem 0; 
+  padding: 3rem 0;
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1200px) {
   div#content {
       width: 80%;
-      margin: 1.5rem;
-      margin-top: 0;
-      padding: 1rem 0 3rem 0; 
+      margin-left: auto;
+      margin-right: auto;
+      padding: 3rem 0;
     }
+}
+
+#doc {
+  padding-bottom: 1rem;
 }
 
 p {
@@ -134,9 +132,19 @@ h3.list {
   text-align: right;
 }
 
-@media all and (max-width: 800px) {
+#doc > .hanging-subtitle p:first-child {
+  border-top: 3px solid #333;
+}
+
+@media all and (max-width: 1200px) {
   .hanging-subtitle, .sidenote {
-    visibility: hidden;
+    position: relative;
+    display: block;
+    font-size: 90%;
+    left: 0;
+    width: 100%;
+    float: initial;
+    text-align: initial;
   }
 }
 
@@ -155,8 +163,22 @@ h3.list {
   color: #666;
 }
 
-.sidenote.list {
-  margin-bottom: 0;
+@media all and (max-width: 1200px) {
+  .sidenote {
+    color: grey;
+    padding: 1rem 0.5rem 0 0;
+  }
+
+  #doc .sidenote {
+    padding: 0.5rem 0.5rem 0.5rem 0.75rem;
+    border: 1px dashed grey;
+    border-radius: 5px;
+  }
+
+  #doc .sidenote:has(img) {
+    border: none;
+    max-width: 30vw;
+  }
 }
 
 /* Links */
@@ -197,6 +219,11 @@ a.internal {
   color: rgb(166, 140, 145);
   background: none;
   transition: color 0.2s;
+}
+
+img.icon {
+  width: initial;
+  padding: 0 5px;
 }
 
 /* Images and iframes */
@@ -250,6 +277,10 @@ ul li:before {
 
 ol li p, ul li p {
   margin-left: 2.5em;
+}
+
+ul, ol {
+  padding-bottom: 0.5rem;
 }
 
 /* Tables */
@@ -402,7 +433,7 @@ details summary {
   border-bottom: 0.2rem solid #444;
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1200px) {
   #top-stripe {
     width: 100%;
     left: 0;
@@ -417,26 +448,62 @@ kbd {
   padding: 1px 2px;
 }
 
-/* Navbar at the bottom */
-.nav-outer, .nav-inner {
-  margin: 0;
-  padding: 0;
+/* Back button at the top of articles */
+.article-nav-outer {
+  position: absolute;
+  width: 38rem;
+  margin-left: -9rem;
+  margin-top: -2.81rem;
 }
 
-@media all and (max-width: 800px) {
-  .nav-outer {
-    padding-top: 2rem;
-  }
-}
-
-.nav-inner {
+.article-nav-inner {
+  position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
   align-content: center;
   align-items: center;
+  opacity: 0.9;
+}
+
+.article-nav-inner a.internal {
+  display: block;
+  font-size: 75%;
+  text-transform: uppercase;
+  text-align: center;
+  box-sizing: content-box;
+  padding: 0.2rem;
+  padding-top: 0.4rem;
+  padding-right: 0.3rem;
+}
+
+.article-nav-inner a.internal:hover {
+  background-color: rgba(166, 140, 145, 0.5);
+  transition: opacity 0.5s;
+  border-radius: 0;
+}
+
+/* Navbar at the bottom */
+.nav-outer, .nav-inner {
+  margin: 0;
+  padding: 0;
+}
+
+@media all and (max-width: 1200px) {
+  .nav-outer {
+    padding-top: 1rem;
+  }
+}
+
+.nav-inner {
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
   left: 2rem;
   bottom: 0;
   width: 38rem;
@@ -444,7 +511,7 @@ kbd {
   border-top: 0.2rem solid #444;
 }
 
-@media all and (max-width: 800px) {
+@media all and (max-width: 1200px) {
   .nav-inner {
     width: 100%;
     left: 0;
