add support for changing highlight styles

--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,5 +1,5 @@
 <!-- Syntax highlighting -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/foundation.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/{{ .Site.Params.highlightstyle | default "foundation" }}.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 <script>
   hljs.highlightAll();
