--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -7,7 +7,14 @@
 
 <!-- Math syntax -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+  MathJax = {
+      tex: {
+        inlineMath: [ ['$','$'] ]
+      }
+  };
+</script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"></script>
 
 <!-- Icons -->
 <script src="https://unpkg.com/feather-icons"></script>
