add stand-out paragraph

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -411,6 +411,12 @@ mark {
   content: " | ";
 }
 
+.stand-out-paragraph {
+  border-radius: 5px;
+  background-color: #EBEBEB;
+  padding: 1em;
+}
+
 .intro-text {
   margin-top: 1rem;
 }
