--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ body {
 
 @media all and (max-width: 1200px) {
   body {
+    min-width: auto;
     max-width: 100vw;
     width: 98%;
     padding: 0 1%;
