--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,8 +28,6 @@ body {
   body {
     min-width: auto;
     max-width: 100vw;
-    width: 98%;
-    padding: 0 1%;
   }
 }
 
@@ -100,6 +98,12 @@ h1 {
   line-height: 1.1;
 }
 
+@media all and (max-width: 1200px) {
+  h1 {
+    font-size: 1.5rem
+  }
+}
+
 h2 {
   font-weight: 711;
 }
@@ -115,6 +119,14 @@ h2.article-title {
   margin-bottom: 4rem;
 }
 
+@media all and (max-width: 1200px) {
+  h2.article-title {
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+}
+
 h3.list {
   font-weight: 711;
   margin-top: 0.5rem;
@@ -124,6 +136,12 @@ h3.list {
   font-weight: 711;
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
+}
+
+@media all and (max-width: 1200px) {
+  #doc h1, h2, h3 {
+    font-size: 1.2rem
+  }
 }
 
 /* Annotations */
